[package]
name = "pty3"
version = "0.1.0"
edition = "2021"
authors = ["Anillc <i@anillc.cn>"]
repository = "https://github.com/Anillc/pty3"
description = "async pseudo-terminal"
license = "MIT"
include = [
  "**/*.rs",
  "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.144"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
